# cuQuant8

./: CMakeLists.txt  README.md  cpu_quantize.cpp  quantize.cu
include/: dequantize.cuh  matmul.cuh  quantize.cuh
src/: benchmark.py  cpu_quantize.cpp  dequantize.cu  main.cu  matmul.cu  quantize.cu
